[package]
name = "hyper_req_exts"
version = "0.17.0"
edition = "2021"
authors = ["nikos efthias<nikos@mugsoft.io>"]
description = "extension helpers for hyper handlers"
license = "GPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
hyper = { version = "0.14.24", default-features = false }
routerify = { version = "3.0.0", optional = true }
serde = { version = "1.0", default-features = false, optional = true }
serde_json = { version = "1.0", optional = true }
serde_urlencoded = { version = "0.7.1", default-features = false, optional = true }
tap = "1.0.1"
[features]
default = ["routerify"]
json = ["serde", "serde_json"]
urlencoded = ["serde", "serde_urlencoded"]
